# KingdomCard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: CARDS.md  COMMAND.md  PROCESS.md
message/: CMakeLists.txt  basic_message.proto  basic_object.proto  command.proto
src/client/: .gitignore  CMakeLists.txt  main.cpp  res.qrc
src/client/client/include/: card.h  client.h  player.h  start.h
src/client/client/src/: card.cpp  client.cpp  client_logic.cpp  player.cpp  start.cpp
src/client/client/ui/: card.ui  clientwindow.ui  startwindow.ui
src/client/communicator/: commands.h  communicator.cpp  communicator.h
src/client/docs/: Client-Comand.md
src/client/server/: server.cpp  server.h  serverwindow.ui
src/client/ui/: MainWindow.cpp  MainWindow.h
src/client/utils/: utils.cpp  utils.h
src/server/: CMakeLists.txt  main.cpp
src/server/basic/: Card.cpp  Card.h  CardEnum.cpp  CardEnum.h  GameController.cpp  GameController.h  GameControllerLogic.cpp  GameControllerTools.cpp  Player.cpp  Player.h  Utility.cpp  Utility.h
src/server/cards/: Attack.cpp  Attack.h  Dodge.cpp  Dodge.h  Heal.cpp  Heal.h
src/server/communication/: GameServer.cpp  GameServer.h
src/test_client/: CMakeLists.txt  main.cpp
